algorithm-processor/prediction-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prediction-api
  labels:
    name: prediction-api
    app: timeseries-prediction
